--- a/src/scss/mod_new_articles.scss
+++ b/src/scss/mod_new_articles.scss
@@ -9,7 +9,10 @@
 
   .mod_title {
     margin-left: 20px;
-    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    min-height: 40px;
+    flex-wrap: wrap;
 
     h2 {
       @include clear;
@@ -18,64 +21,149 @@
       color: $color-base;
       margin-right: 20px;
     }
-  }
-  .block_articles{
-    @include clear;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
 
-    .article{
-      margin-bottom: 10px;
-      padding: 10px;
-      max-width: 270px;
-      //height: 300px;
-
-      border-bottom: solid 3px $color-grey-light;
-
-      &:hover{
-        border-bottom: solid 3px $color-base;
-        a.img{
-          img{
-            opacity: 1;
-          }
-        }
-      }
-
-      a.img{
-        width: 100%;
-        img{
-          width: 100%;
-          opacity: .8;
-        }
-      }
-      .data{
-        margin-top: 5px;
-        margin-bottom: 5px;
-        color: $color-base;
-      }
-      .title{
-        a{
-          color: $color-grey;
-          font-size: 16px;
-        }
+    .link_help {
+      a {
+        color: $color-grey;
+        text-decoration: underline;
 
       }
     }
   }
 
-  .all_articles{
-    //margin-top: 5px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 40px;
-    a{
-      color: $color-grey;
-      text-decoration: none;
+  .block_articles{
+    margin: 20px;
+
+    .article{
+      padding: 10px;
+
       &:hover{
-        color: $color-link-base;
+        .wrap_article{
+          border-bottom: 3px solid $color-base;
+
+          .content{
+            top: 0 !important;
+            .text{
+              visibility: visible;
+            }
+          }
+          .button-more{
+            top: 350px !important;
+          }
+        }
+
+      }
+
+      .wrap_article{
+        position: relative;
+        height: 400px;
+        overflow: hidden;
+        border-bottom: 3px solid $color-grey-light;
+
+        img{
+          width: 100%;
+          height: 150px;
+          margin-bottom: 5px;
+          @include devices-min-width-320px{
+            height: 150px;
+          }
+          @include devices-min-width-480px{
+            height: 250px;
+          }
+          @include devices-min-width-600px{
+            height: 150px;
+          }
+          @include devices-min-width-768px{
+            height: 180px;
+          }
+          @include devices-min-width-800px{
+            height: 200px;
+          }
+          @include devices-min-width-992px{
+            height: 140px;
+          }
+
+        }
+        .content{
+          position: absolute;
+          top: 160px;
+          @include devices-min-width-480px{
+            top: 260px;
+          }
+          @include devices-min-width-600px{
+            top: 160px;
+          }
+          @include devices-min-width-768px{
+            top: 200px;
+          }
+          @include devices-min-width-800px{
+            top: 220px;
+          }
+          @include devices-min-width-992px{
+            top: 160px;
+          }
+
+          transition: 1s;
+          background-color: $color-item;
+          z-index: 90;
+
+          .data{
+            color: $color-base;
+            margin-bottom: 5px;
+          }
+          .title{
+            min-height: 120px;
+            margin-bottom: 10px;
+            h3{
+              font-size: 16px;
+
+              a{
+                color:$color-grey ;
+                &:hover{
+                  color: $color-link-base;
+                }
+              }
+            }
+
+          }
+
+          .text{
+            visibility: hidden;
+            max-height: 180px;
+            overflow: hidden;
+          }
+        }
+
+        .button-more{
+          position: absolute;
+          top: 400px;
+          z-index: 100;
+          transition: 1s;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+
+          a{
+            width: 150px;
+            height: 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 5px;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: $color-base;
+            color: $color-item;
+            border-radius: .3em;
+            text-decoration: none;
+
+            &:hover{
+              color: $color-link-active;
+              @include shadow_block;
+            }
+          }
+        }
       }
     }
   }
