--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -313,6 +313,37 @@
               @include devices-max-width-600px{
                 height: 195px;
               }
+
+              .fields_contact{
+
+                i{
+                  padding-right: 10px;
+                }
+                img{
+                  padding-right: 10px;
+                }
+
+                .phone{
+                  display: flex;
+                  align-items: center;
+                  justify-content: flex-start;
+                }
+                .mobile{
+                  display: flex;
+                  align-items: center;
+                  justify-content: flex-start;
+                }
+                .skype{
+                  display: flex;
+                  align-items: center;
+                  justify-content: flex-start;
+                }
+                .email{
+                  display: flex;
+                  align-items: center;
+                  justify-content: flex-start;
+                }
+              }
             }
           }
 
