Добавлены исправления в стили для контактов карточки модуля Продажа щенков

--- a/src/scss/mod_puppies.scss
+++ b/src/scss/mod_puppies.scss
@@ -317,10 +317,10 @@
               .fields_contact{
 
                 i{
-                  padding-right: 10px;
+                  margin-right: 10px;
                 }
                 img{
-                  padding-right: 10px;
+                  margin-right: 10px;
                 }
 
                 .phone{
