--- a/src/scss/mod_new_articles.scss
+++ b/src/scss/mod_new_articles.scss
@@ -62,6 +62,7 @@
       .wrap_article{
         position: relative;
         height: 400px;
+        width: 100%;
         overflow: hidden;
         border-bottom: 3px solid $color-grey-light;
 
@@ -117,7 +118,7 @@
             margin-bottom: 5px;
           }
           .title{
-            max-height: 120px;
+            max-height: 100px;
             margin-bottom: 10px;
             overflow: hidden;
             h3{
@@ -136,7 +137,7 @@
 
           .text{
             visibility: hidden;
-            max-height: 180px;
+            max-height: 210px;
             overflow: hidden;
             font-size: 14px;
           }
