--- a/src/scss/main_content.scss
+++ b/src/scss/main_content.scss
@@ -18,7 +18,7 @@
       margin: 5px;
       margin-top: 15px;
       margin-bottom: 15px;
-      border: 1px dashed $color-base;
+      border: 1px dashed $color-grey;
       border-radius: 5px;
 
       h2 {
@@ -163,16 +163,18 @@
           margin-right: 5px;
           align-items: center;
           margin-bottom: 5px;
-          border-bottom: 1px dashed $color-base;
+          border-bottom: 1px dashed lighten($color-grey, 20%);
 
           i {
-            color: lighten($color-base, 5%);
+            //color:$color-grey;
+            color: lighten($color-grey, 20%);
             font-size: 18px;
             margin-right: 5px;
           }
 
           span {
-            color: lighten($color-base, 10%);
+            //color: lighten($color-grey-light, 10%);
+            color: lighten($color-grey, 30%);
           }
 
           ul {
@@ -186,10 +188,22 @@
               margin-right: 10px;
 
               a {
+                color: lighten($color-grey, 30%);
+
                 &:hover {
-                  color: $color-base;
+                  color: lighten($color-base, 5%);
+                  i{
+                    color: lighten($color-base, 5%);
+                  }
+                  span{
+                    color: lighten($color-base, 5%);
+                  }
                 }
               }
+
+              //&:hover{
+              //  i{color: lighten($color-base, 5%);}
+              //}
             }
           }
         }
@@ -201,25 +215,52 @@
           margin-right: 5px;
           padding-left: 10px;
           padding-bottom: 5px;
-          border-bottom: 1px dashed $color-base;
+          border-bottom: 1px dashed lighten($color-grey, 20%);
 
-          .views, .comments, .likes, .bookmarks, .createdate, .editdate, .enddate {
+          div {
             display: flex;
             flex-wrap: wrap;
             align-items: center;
             margin-right: 10px;
+            color: lighten($color-grey, 5%);
+            cursor: default;
 
             i {
               margin-right: 5px;
               font-size: 18px;
-              color: lighten($color-base, 5%);
+              color: lighten($color-grey, 20%);
             }
 
             span {
               margin-right: 5px;
-              color: lighten($color-base, 10%);
+              color: lighten($color-grey, 30%);
+            }
+
+            &:hover{
+              //.hide{
+              //  display: block;
+              //  transition: all 2s;
+              //}
             }
           }
+
+          //.views, .comments, .likes, .bookmarks, .createdate, .editdate, .enddate {
+          //  display: flex;
+          //  flex-wrap: wrap;
+          //  align-items: center;
+          //  margin-right: 10px;
+          //
+          //  i {
+          //    margin-right: 5px;
+          //    font-size: 18px;
+          //    color: lighten($color-base, 5%);
+          //  }
+          //
+          //  span {
+          //    margin-right: 5px;
+          //    color: lighten($color-base, 10%);
+          //  }
+          //}
 
         }
 
